# STC_Task

./: CMakeLists.txt  README.md  build.sh
src/: CMakeLists.txt
src/iostream_byte_converter/: CMakeLists.txt  IOStreamByteConverter.h
src/logger/: CMakeLists.txt  Logger.cpp  Logger.h
test/: CMakeLists.txt  STC_TaskTest.cpp
test/fake_interfaces/: FakeSink.h  FakeSource.h
